5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_2390.log
== TEST (2019-05-28 17:21:42) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:21:56) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes
print(frequencia)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:27:34) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes
mes=array([1,2,3,4,5,6,7,8,9,10,11,12])
i=0
while(frequencia[i] != max(frequencia)):
	i=i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:28:31) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes
mes=array([1,2,3,4,5,6,7,8,9,10,11,12])
i=0
while (frequencia [i] != max(frequencia)):
	i=i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:28:54) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes
mes=array([1,2,3,4,5,6,7,8,9,10,11,12])
i=0
while frequencia [i] != max(frequencia):
	i=i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:29:26) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite presentes:')))
frequencia = presentes - ausentes
mes=array([1,2,3,4,5,6,7,8,9,10,11,12])
i=0
while(frequencia[i] != max(frequencia)):
	i=i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:01) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite ausentes:')))
frequencia = presentes - ausentes
mes = array([1,2,3,4,5,6,7,8,9,10,11,12])
i = 0
while(frequencia[i] != max(frequencia)):
	i = i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:31:21) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite ausentes:')))
frequencia = presentes - ausentes
mes = array([1,2,3,4,5,6,7,8,9,10,11,12])
i = 0
while(frequencia[i] != max(frequencia)):
	i = i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:32:05) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite ausentes:')))
frequencia = presentes - ausentes
mes = array([1,2,3,4,5,6,7,8,9,10,11,12])
i = 0
while(frequencia[i] != max(frequencia)):
	i = i+1
print(mes[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:32:22) 
-- CODE:
from numpy import *
presentes = array(eval(input('Digite presentes:')))
ausentes = array(eval(input('Digite ausentes:')))
frequencia = presentes - ausentes
mes = array([1,2,3,4,5,6,7,8,9,10,11,12])
i = 0
while(frequencia[i] != max(frequencia)):
	i = i+1
print(mes[i])

-- EXECUTION TIME:
0.350925
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:49:50) 
-- CODE:
b=arrange(2)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    b=arrange(2)
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:49:56) 
-- CODE:
b=arange(2)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    b=arange(2)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
